Fix a few broken CSS

--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -124,7 +124,11 @@ pre {
   margin-bottom: 15px;
 }
 
-.result-section {
+.result {
+  margin-top:20px;
+}
+
+.result-section-dropdown {
   margin-top:10px;
 }
 
